# eqeqo_auth-api-

./: .env-example  .gitignore  Cargo.toml  README.md  admin.html  contact.html  index.html  rustfmt.toml  tienda.html
db/: demo_data.sql  people.sql  structure.sql
db/migrations/: 0001_initial_schema.sql
src/: db.json  lib.rs  main.rs
src/classes/: mod.rs  user.rs
src/components/: admin-editor.js  app-shell.js  filter-bar.js  hero-section.js  md-block.js  product-card.js  product-grid.js  theme-toggle.js
src/db/: mod.rs
src/handlers/: auth.rs  mod.rs  permissions.rs  relations.rs  roles.rs  services.rs  users.rs
src/lib/: api.js  md.js  theme.js
src/models/: user.rs
src/services/: auth.rs
src/styles/: main.css
src/types/: dto.ts
src/utils/: hash.rs
src/views/: admin.js  contact.js  home.js  tienda.js
tests/: api_tests.rs
