[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
hyper = "1.6"
bytes = "1.5"# argon2 = "0.5.3"
# async-h1 = "2.3"
# async-std = { version = "1.13.1", features = ["attributes"] }
# chrono = "0.4.41"
# dotenv = "0.15.0"
# http = "0.2"
# routerify = "3.0.0"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
# sqlx = { version = "0.8.5", features = ["postgres", "runtime-async-std-native-tls", "macros"] }
# uuid = { version = "1.16.0", features = ["v4"] }

