[package]
name = "auth_api"
version = "0.0.1"
edition = "2021"
authors = ["fahedsl <fahedsl@yandex.com>"]
description = "Centralized authentication and authorization API for multiple independent services. Manages users, roles, permissions, and service associations."
license = "MIT"
repository = "https://gitlab.com/numanope/eqeqo/bazoj/auth-api"
homepage = "https://gitlab.com/numanope/eqeqo/bazoj/auth-api"
readme = "README.md"
keywords = ["authentication", "authorization", "api", "users", "roles"]
categories = ["authentication", "api", "access-control"]

[lib]
path = "src/lib.rs"

[dependencies]
httpageboy = { version = "1.0.12", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"